# oci_kernel

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-01-oci-kernel-design.md  2026-03-01-oci-kernel-impl.md  2026-03-01-rust-os-design.md  2026-03-02-linux-abi-design.md  2026-03-02-linux-abi-impl.md
kernel/: Cargo.toml
kernel/src/: config.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs
kernel/src/container/: mod.rs  runtime.rs  spec.rs  store.rs
kernel/src/fs/: mod.rs  overlayfs.rs  vfs.rs
kernel/src/host/: getty.rs  mod.rs  shell.rs
kernel/src/isolation/: cgroup.rs  mod.rs  namespace.rs  seccomp.rs
kernel/src/memory/: buddy.rs  heap.rs  mod.rs
kernel/src/net/: http.rs  mod.rs  stack.rs  tls.rs  virtio_net.rs  vswitch.rs
kernel/src/oci/: image_store.rs  layer.rs  manifest.rs  mod.rs  registry.rs
kernel/src/process/: mod.rs  scheduler.rs
runner/: Cargo.toml
runner/src/: main.rs
