[package]
name = "oci-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
x86_64 = "0.15"
pic8259 = "0.10"
uart_16550 = "0.3"
spin = { version = "0.9", features = ["lazy"] }
linked_list_allocator = "0.10"

[dependencies.smoltcp]
version = "0.11"
default-features = false
features = ["proto-ipv4", "socket-tcp", "socket-udp", "medium-ethernet", "alloc"]

[dependencies.serde_json]
version = "1"
default-features = false
features = ["alloc"]

[dependencies.miniz_oxide]
version = "0.8"
default-features = false
features = ["with-alloc"]

[dependencies.rand_core]
version = "0.6"
default-features = false

